HelloUltraviolet/Fixtures/RejectedSource/Comptime/DeriveOnProcedure/Expected.uv
//! Expected diagnostic metadata for the DeriveOnProcedure rejected-source specimen.

expectedDiagnostic("E-CTE-0311", "requirement.22.DeriveAttributeTargetKinds")
expectedDiagnostic("E-CTE-0311", "diagnostics.22.DeriveTargetsDiagnosticsReference")
